pass test for VideoList and VideoListEntry. Complete implementation of VideoPlayer

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "test": "live-server --open=./SpecRunner.html --port=8081"
+    "test": "live-server --open=./SpecRunner.html --port=8081",
+    "start": "npx babel . --watch --out-dir=compiled --presets=@babel/preset-react --ignore=node_modules,compiled --source-maps=inline",
+    "run": "npx live-server"
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
